<package>
  <name>hironx_head_action</name>
  <version>1.1.5</version>
  <description>The head action is a node that provides an action interface for
  pointing the head of the robot. It passes trajectory goals to the
  controller, and reports success when they have finished executing.

  Originally developed at <a href = "http://wiki.ros.org/pr2_head_action">pr2_head_action</a>
  </description>
  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/hironx_head_action</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Stuart Glaser</author>
  <author email="iisaito@opensource-robotics.tokyo.jp">Isaac I. Y. Saito</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>trajectory_msgs</run_depend>
</package>
