<package>
  <name>hironx_ros_bridge</name>
  <version>1.0.34</version>
  <description>ROS-OpenRTM interfacing package for the opensource version of Kawada's Hiro/NEXTAGE dual-arm robot.

  NOTE: This package is multi-license -- pay attention to file header in each file where license is declared. For Creative Commons nc 4.0 applied, see <a href = "http://creativecommons.org/licenses/by-nc/4.0">here</a>.
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isaac Isao Saito</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <license>BSD</license>
  <license>CreativeCommons-by-nc-4.0</license>

  <url type="website">http://ros.org/wiki/hironx_ros_bridge</url>
  <url type="repository">https://github.com/start-jsk/rtmros_hironx</url>
  <url type="bugtracker">https://github.com/start-jsk/rtmros_hironx/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hrpsys_ros_bridge</build_depend> <!-- Needed to transitively depend on openhrp3. See https://github.com/start-jsk/rtmros_hironx/pull/30#commitcomment-5535604 -->
  <build_depend>mk</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rosbash</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>roslang</build_depend>
  <build_depend>unzip</build_depend>
  <build_depend>gnuplot</build_depend>

  <run_depend>gnuplot</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>hrpsys_ros_bridge</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosbash</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslang</run_depend>
  <run_depend>tf</run_depend>
  
  <!-- <test_depend>hrpsys_ros_bridge</test_depend> -->

  <export>
    <rqt_gui plugin="${prefix}/rqt_plugin.xml"/>
  </export>
</package>
