<?xml version="1.0"?>
<package>
  <name>hironx_rpc_msgs</name>
  <version>0.0.1</version>
  <description>ROS topic/service/action files are defined in this package for
  Hironx RPC (Remote Procedure Call).
  </description>
  <maintainer email="todotodotodo@keio.jp">Keio University Yamaguchi Lab</maintainer>
  <author email="dev@opensource-robotics.tokyo.jp">TORK</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/hironx_rpc_msgs</url>
  <url type="repository">https://github.com/start-jsk/rtmros_hironx</url>
  <url type="bugtracker">https://github.com/start-jsk/rtmros_hironx/issues</url>  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export />
</package>
