<?xml version="1.0"?>
<package>
  <name>rtmros_hironx</name>
  <version>1.0.0</version>
  <description>The rtmros_hironx package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">k-okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hironx_moveit_config</run_depend>
  <run_depend>hironx_ros_bridge</run_depend>

  <export>
    <metapackage/>
  </export>
</package>