<?xml version="1.0"?>
<package>
  <name>rtmros_hironx</name>
  <version>1.0.33</version>
  <description>The rtmros_hironx package is an operating interface via ROS and OpenRTM, for Hiro and <a href = "http://nextage.kawada.jp/en/">NEXTAGE OPEN</a> dual-armed robots from Kawada Industries Inc.
  <br /><br />
  NOTE for Hiro users: Utilizing this opensource controller for Hiro requires installation both on Controller Box (QNX-based) and Vision PC (Ubuntu Linux), and the steps for it are not shared publicly in order to avoid any possible inconvenience that can easily be caused by slight mis-operation during installation. Please contact <a href = "http://opensource-robotics.tokyo.jp/?page_id=56&amp;lang=en">TORK</a> for an advice.
  </description> 

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isaac IY Saito</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rtmros_hironx/</url>
  <url type="repository">https://github.com/start-jsk/rtmros_hironx</url>
  <url type="bugtracker">https://github.com/start-jsk/rtmros_hironx/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hironx_calibration</run_depend>
  <run_depend>hironx_moveit_config</run_depend>
  <run_depend>hironx_ros_bridge</run_depend>

  <export>
    <metapackage/>
  </export>
</package>